# turtle-artifacts

turtle-cli/: CATEGORY_THEORY_CODING_TRANSFORMATION.md  CNL_AS_CONFIG_PRINCIPLE.cnl  CNL_CATEGORY_THEORY_ALIGNMENT.cnl  CNL_FIRST_INTEGRATION_PROTOCOL.cnl  CNL_MCP_DEFAULT_PROTOCOL.cnl  COMMAND_CONTROL_PIPELINE.cnl  COMPREHENSIVE_SESSION_DOCUMENTATION.md  CORE_INTERACTION_PRINCIPLE.cnl  Cargo.toml  DEFAULT_EXECUTION_MODE.cnl  Dockerfile  ENHANCED_RUST_TURTLE_SPECIFICATION.cnl  ETHICAL_MONETIZATION_RESEARCH.cnl  FLEET_ADVANCEMENT_CORE_INTERACTION_PRINCIPLE.md  FLEET_EFFICIENCY_RESEARCH_TASK.cnl  FLEET_WIDE_CNL_FIRST_ACTIVATION.cnl  GLOBAL_MESH_COMMUNICATION_RESEARCH.cnl  OBSERVABLE_FLEET_INTERFACE.cnl  P0-INPUT-LOOP-BUG.md  PERMANENT_CODING_GUIDELINES.cnl  PERMANENT_IMMUTABLE_INSTALLATION.cnl  PROTOCOL_DEVELOPMENT_METHODOLOGY.md  TERMINAL_CONTROL_MCP.cnl  TOP_TURTLE_AUTHORITY.cnl  TOP_TURTLE_AUTHORITY_CONTROL.cnl  TOP_TURTLE_GOALS_SEEKING_PROTOCOLS.cnl  TUPSHIN_TURTLE_RECOGNITION.cnl  TURTLE_FLEET_CONFIG.cnl  TURTLE_FLEET_CONNECTIVITY.cnl  TURTLE_MUTUAL_AID_PRINCIPLE.cnl  UNIVERSAL_OBSERVABILITY_PROTOCOLS.cnl  WINDOW_MANAGEMENT_MCP.cnl  cnl_to_mcp_generator.ts  command_to_mcp_parser.ts
turtle-cli/generated-fleet-mcp/src/: index.ts
turtle-cli/generated-observation-mcp/: package-lock.json  package.json
turtle-cli/generated-terminal-mcp/: package.json
turtle-cli/generated-window-mcp/: package.json  tsconfig.json
turtle-cli/src/: claude.rs  cnl_config.rs  command_parser.rs  dashboard.rs  lib.rs  main.rs  safety.rs  system.rs  types.rs  work.rs
(+98 files in other folders)
