[package]
name = "turtle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "turtle"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
ratatui = "0.24"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.18"
sysinfo = "0.29"
signal-hook = "0.3"